--- a/APIManagement/appsettings.Development.json
+++ b/APIManagement/appsettings.Development.json
@@ -1,4 +1,6 @@
 {
+ // "AdminSafeList": "192.168.1.5",
+  "AdminSafeList": "127.0.0.1;192.168.1.5;::1",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
